--- a/Tetris_WPF/MainWindow.xaml
+++ b/Tetris_WPF/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Tetris_WPF"
-        mc:Ignorable="d" Focusable="False"
-        Title="MainWindow" Height="650" Width="800">
-    <Grid Background="White" Focusable="False">
-        <local:Board Background="Black" x:Name="GameBoard" Focusable="True" KeyDown="Grid_KeyDown"/>
+        xmlns:local="clr-namespace:Tetris_WPF" Background="Black" MaxHeight="544.053" MaxWidth="568.062"
+        mc:Ignorable="d" Focusable="False" ResizeMode="NoResize" 
+        Title="MainWindow" Height="544.053" Width="568.062">
+    <Grid Background="White" Focusable="False" >
+        <local:Board Background="Black" x:Name="GameBoard" Focusable="True" KeyDown="Grid_KeyDown" Grid.ColumnSpan="2" Margin="6,7,5.6,7.4"/>
     </Grid>
-    
+
 </Window>
